--- a/Agenda_I4pro/Views/Contato/Create.cshtml
+++ b/Agenda_I4pro/Views/Contato/Create.cshtml
@@ -228,7 +228,7 @@
 
 
 <p>
-    @Html.ActionLink("Voltar", "Index")
+    @Html.ActionLink("Voltar para Lista", "Index")
 </p>
 
 @section Scripts {
