--- a/Agenda_I4pro/Views/Contato/Edit.cshtml
+++ b/Agenda_I4pro/Views/Contato/Edit.cshtml
@@ -1,67 +1,87 @@
-﻿@model Agenda_I4pro.Models.ModelViewModel.ContatoDetalheViewModel
+﻿@model Agenda_I4pro.Models.ModelViewModel.ContatoEditarViewModel
 
 @{
     ViewBag.Title = "Edit";
+
 }
 
-<h2>Editar</h2>
-
+<h2>Editar Contato</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+
+<div class="form-horizontal">
+
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.Hidden("ID_CONTO", Model.TB_CONTATOVIEWMODEL.ID_CONTO, new { @id = "ID_CONTO" })
+
     
-    <div class="form-horizontal">
-        <h4>ContatoDetalheViewModel</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CD_CONTO_NOME, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CD_CONTO_NOME, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CD_CONTO_NOME, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CD_CONTO_SOBRENOME, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CD_CONTO_SOBRENOME, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CD_CONTO_SOBRENOME, "", new { @class = "text-danger" })
-            </div>
-        </div>       
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CD_EMAIL, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CD_EMAIL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CD_EMAIL, "", new { @class = "text-danger" })
-            </div>
-        </div>
-       
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CD_TEL, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CD_TEL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CD_TEL, "", new { @class = "text-danger" })
-            </div>
-        </div>       
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_NOME, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_NOME, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_NOME, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_SOBRENOME, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_SOBRENOME, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TB_CONTATOVIEWMODEL.CD_CONTO_SOBRENOME, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <label class="control-label col-md-2">  </label>
+        <div class="col-md-10">
+
+
+            @for (int i = 0; i < Model.TB_TELEFONEVIEWMODEL.ToList().Count; i++)
+            {
+
+                @Html.LabelFor(Model => Model.TB_TELEFONEVIEWMODEL.ToList()[i].CD_TEL, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(Model => Model.TB_TELEFONEVIEWMODEL.ToList()[i].CD_TEL, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(Model => Model.TB_TELEFONEVIEWMODEL.ToList()[i].CD_TEL, "", new { @class = "text-danger" })
+                @Html.HiddenFor(Model => Model.TB_TELEFONEVIEWMODEL.ToList()[i].ID_TEL, new { @readonly = "readonly" })
+            }
+
+            
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="control-label col-md-2">  </label>
+        <div class="col-md-10">
+            @for (int i = 0; i < Model.TB_EMAILVIEWMODEL.ToList().Count; i++)
+            {
+
+                @Html.LabelFor(Model => Model.TB_EMAILVIEWMODEL.ToList()[i].CD_EMAIL, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(Model => Model.TB_EMAILVIEWMODEL.ToList()[i].CD_EMAIL, new
+                {
+                    htmlAttributes = new { @class = "form-control" }
+                })
+                @Html.ValidationMessageFor(Model => Model.TB_EMAILVIEWMODEL.ToList()[i].CD_EMAIL, "", new { @class = "text-danger" })
+                @Html.HiddenFor(Model => Model.TB_EMAILVIEWMODEL.ToList()[i].ID_EMAIL, new { @readonly = "readonly" })
+
+            }
+
+            @Html.ValidationMessageFor(model => model.TB_TELEFONEVIEWMODEL, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Editar" class="btn btn-default" />
+        </div>
+    </div>
+</div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar para Lista", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
