--- a/Agenda_I4pro/Views/Shared/_Layout.cshtml
+++ b/Agenda_I4pro/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Agenda", "Index", "Contato", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Agenda - Home", "Index", "Contato", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
